# fisica-rt

./: CMakeLists.txt  LICENCE  README.md  make-web.py  make-win.bat  run-web.py  shell.html
files/env/: Terms-of-Use.txt
files/gl/: bilateral.glsl  cascades.glsl  environment.glsl  frontbuffer.glsl  raytracing.glsl
lib/noise/noise/: samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_128spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_16spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_1spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_256spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_32spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_4spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_64spp.h  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_8spp.h  sobol.h
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Context.hpp  File.cpp  File.hpp  GUI.cpp  GUI.hpp  Geometry.hpp  Graphics.hpp  Input.hpp  Main.cpp  Main.hpp  Math.hpp  Noise.cpp  Noise.hpp  Parsing.cpp  Parsing.hpp  Platform.hpp  Render.cpp  Render.hpp  Shaders.cpp  Shaders.hpp  Sphere.hpp  Timing.cpp  Timing.hpp  Uniforms.hpp
src/gl/: Descriptor.cpp  Descriptor.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GL.cpp  GL.hpp  ImGui.cpp  ImGui.hpp  Math.hpp  OpenGL.cpp  OpenGL.hpp  Parser.cpp  Parser.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  Shaders.cpp  Shaders.hpp  Texture2D.cpp  Texture2D.hpp  UniformBuffer.hpp
src/interfaces/: IApplication.hpp
src/math/: Angles.hpp  Math.hpp  Random.hpp
src/noise/: Noise.cpp  Noise.hpp  Sampler4SPP.cpp  Sampler4SPP.hpp
src/pipelines/: Cascades.cpp  Cascades.hpp  Raytracing.cpp  Raytracing.hpp
src/properties/: Easing.cpp  Easing.hpp  IProperty.hpp  Interpolator.hpp  Manager.cpp  Manager.hpp  Property.cpp  Property.hpp
src/sdl/: File.cpp  File.hpp  Imgui.hpp  Main.cpp  MainWeb.cpp  MainWeb.hpp  SDL.cpp  SDL.hpp  SDLFile.cpp  SDLFile.hpp  SDLMain.cpp  SDLMainWeb.cpp
